18_reverse_str/grade.txt
Grading at Mon Aug 31 01:04:48 UTC 2020
Attempting to compile  reverse.c
reverse.c: In function ‘reverse’:
reverse.c:10:5: error: ‘tmpstr’ undeclared (first use in this function)
     tmpstr = NULL);
     ^
reverse.c:10:5: note: each undeclared identifier is reported only once for each function it appears in
reverse.c:10:18: error: expected ‘;’ before ‘)’ token
     tmpstr = NULL);
                  ^
reverse.c:10:18: error: expected statement before ‘)’ token
The code did not compile!

Overall Grade: F
